<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_view"
        android:icon="@drawable/ic_grid_view"
        android:title="@string/action_toggle_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_protected"
        android:icon="@drawable/ic_lock"
        android:title="@string/protected_videos"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_manage_categories"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/manage_categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
